--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.8",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
+    "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
